--- a/kas/kas-toradex-sdk.yml
+++ b/kas/kas-toradex-sdk.yml
@@ -19,6 +19,14 @@
     meta-toradex-distro:
       url: https://git.toradex.com/meta-toradex-distro.git
       refspec: scarthgap-7.x.y
+      
+    meta-freescale:
+      url: https://github.com/Freescale/meta-freescale.git
+      refspec: scarthgap
+
+    meta-freescale-3rdparty:
+      url: https://github.com/Freescale/meta-freescale-3rdparty.git
+      refspec: scarthgap
 
     poky:
       url: https://git.yoctoproject.org/poky
