--- a/kas/kas-toradex-sdk.yml
+++ b/kas/kas-toradex-sdk.yml
@@ -9,11 +9,11 @@
 
   repos:
     meta-toradex-torizon:
-      url: https://git.toradex.com/meta-toradex-torizon.git
+      url: https://github.com/toradex/meta-toradex-torizon.git
       refspec: scarthgap-7.x.y
 
     meta-toradex-security:
-      url: https://git.toradex.com/meta-toradex-security.git
+      url: https://github.com/toradex/meta-toradex-security.git
       refspec: scarthgap-7.x.y
   
     meta-toradex-bsp-common:
