--- a/kas/kas-toradex-sdk.yml
+++ b/kas/kas-toradex-sdk.yml
@@ -36,6 +36,10 @@
       url: https://github.com/Freescale/meta-freescale-3rdparty.git
       refspec: scarthgap
 
+    meta-updater:
+      url: https://github.com/uptane/meta-updater.git
+      refspec: scarthgap
+      
     poky:
       url: https://git.yoctoproject.org/poky
       refspec: scarthgap
@@ -50,6 +54,10 @@
         meta-oe:
         meta-python:
         meta-networking:
+
+    meta-virtualization:
+      url: https://git.yoctoproject.org/git/meta-virtualization
+      refspec: scarthgap
 
   local_conf_header:
     standard: |
