--- a/kas/kas-toradex-sdk.yml
+++ b/kas/kas-toradex-sdk.yml
@@ -60,10 +60,10 @@
       url: https://git.yoctoproject.org/git/meta-arm
       branch: scarthgap
         layers:
-          meta-arm
-          meta-arm-bsp
-          meta-arm-systemready
-          meta-arm-toolchain
+          meta-arm:
+          meta-arm-bsp:
+          meta-arm-systemready:
+          meta-arm-toolchain:
 
     meta-security:
       url: https://git.yoctoproject.org/git/meta-security
